<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bowenchin.android.noter.TaskListActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:background="?selectableItemBackgroundBorderless"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_sort_date"
        android:orderInCategory="200"
        android:title="@string/action_sort_date"
        android:icon="@drawable/ic_event_note_white_24dp"
        android:background="?selectableItemBackgroundBorderless"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_sort_alpha"
        android:orderInCategory="300"
        android:title="@string/action_sort_title"
        android:icon="@drawable/ic_sort_by_alpha_white_24dp"
        android:background="?selectableItemBackgroundBorderless"
        app:showAsAction="always"
        />
</menu>
