<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tall_toolbar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlways"
            app:expandedTitleGravity="top|left|start"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/header">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/titleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:elevation="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="17"
                        android:hint="@string/title"
                        android:textSize="22sp" />
                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/notesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="16dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/notes"
                    android:hint="@string/notes"
                    android:ems="17"
                    android:minLines="5"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@+id/fab"
                    android:layout_alignEnd="@+id/fab" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_insert_comment_black_24dp"
                android:layout_marginBottom="75dp"
                android:layout_marginStart="16dp"
                android:id="@+id/imageView"
                android:layout_alignBottom="@+id/notesLayout"
                android:tint="?attr/colorPrimaryDark"/>

            <Switch
                android:id="@+id/reminderSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/notesLayout"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/reminder_switch"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/reminderLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/notesLayout"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp">

            <ImageView
                android:id="@+id/reminderIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_insert_invitation_black_24dp"
                android:layout_below="@+id/remindText"
                android:layout_marginTop="8dp"
                android:tint="?attr/colorPrimaryDark"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alarm_black_24dp"
                android:id="@+id/time_icon"
                android:layout_below="@+id/reminderIcon"
                android:layout_marginTop="16dp"
                android:tint="?attr/colorPrimaryDark"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.Medium"
                android:id="@+id/task_date"
                android:text="Task Date"
                android:textColor="@color/orange200"
                android:layout_alignTop="@+id/reminderIcon"
                android:layout_alignParentStart="true"
                android:layout_marginStart="32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.Medium"
                android:id="@+id/task_time"
                android:text="Task Time"
                android:textColor="@color/orange200"
                android:layout_alignBottom="@+id/time_icon"
                android:layout_alignStart="@+id/task_date" />

            <TextView
                android:id="@+id/remindText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/reminderIcon"
                android:layout_alignStart="@+id/reminderIcon"
                android:text="@string/set_reminder"
                android:textSize="18sp"
                android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/header"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_done_white_24dp"
        app:elevation="10dp"
        app:fabSize="normal"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="right|bottom" />
</android.support.design.widget.CoordinatorLayout>